--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
+#Ambiente de prueba
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/portfoliowgta?useSSL=false&serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#Ambiente de produccion
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/portfoliowgta?useSSL=false&serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.username=root
-spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://ur6oj8uvcpnhlb8y:UG7GJrUffXeeNL7v9hTr@bolekfebbgg8ritssmrw-mysql.services.clever-cloud.com:3306/bolekfebbgg8ritssmrw
+spring.datasource.username=ur6oj8uvcpnhlb8y
+spring.datasource.password=UG7GJrUffXeeNL7v9hTr
 
 #JWT
 jwt.secret = secret
