--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@
 #Ambiente de produccion
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://ur6oj8uvcpnhlb8y:UG7GJrUffXeeNL7v9hTr@bolekfebbgg8ritssmrw-mysql.services.clever-cloud.com:3306/bolekfebbgg8ritssmrw
-spring.datasource.username=ur6oj8uvcpnhlb8y
-spring.datasource.password=UG7GJrUffXeeNL7v9hTr
+spring.datasource.url=jdbc:mysql://uygpeen5iw6npjj0:qGlxNTRPo6DMHsGWBUpo@bhyezlzmedx6gttb4vaf-mysql.services.clever-cloud.com:3306/bhyezlzmedx6gttb4vaf
+spring.datasource.username=uygpeen5iw6npjj0
+spring.datasource.password=qGlxNTRPo6DMHsGWBUpo
 
 #JWT
 jwt.secret = secret
