--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-parent</artifactId>
+            <version>2.7.6</version>
+            <type>pom</type>
+        </dependency>
+        
+        
     </dependencies>
     <build>
         <plugins>
